[project]
name = "merge-xlsx"
version = "0.1.1"
description = ""
authors = [
    {name = "viniciusccosta",email = "viniciusccosta95@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[project.urls]
"Homepage" = "https://github.com/viniciusccosta/merge-xlsx"
"Repository" = "https://github.com/viniciusccosta/merge-xlsx"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
merge-xlsx = "merge_xlsx.cli:main"